fix spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -269,6 +269,11 @@ header {
   padding-bottom: 20px;
 }
 
+.py-40 {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
 .py-80 {
   padding-top: 80px;
   padding-bottom: 80px;
